--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,7 +1,7 @@
 main:
 
   - title: Two-dimensional Błocki, Lp-Mahler, and Bourgain conjectures, 
-    # authors: 
+    authors: joint with Y.A. Rubinstein,
     # conference_short: CVPR
     conference: "preprint, 2024, arxiv: 2401:10992." 
     pdf: https://arxiv.org/abs/2401.10992
@@ -26,7 +26,7 @@ main:
   - title: Lp-polarity, Mahler volumes, and the isotropic constant,
     authors: joint with B. Berndtsson and Y.A. Rubinstein, 
     # conference_short: MICCAI
-    conference: "preprint, 2023, axriv: 2304.14363"
+    conference: "preprint, 2023, axriv: 2304.14363."
     pdf: https://arxiv.org/abs/2304.14363
     # code: https://github.com/MrGiovanni/ContinualLearning
     # bibtex: https://bib.yliu.me/MICCAI23.txt
