--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Basic Information 
-title: Vlassis Mastrantonis 
+title: Vlassis Mastrantonis
 position: Ph.D. Student
 affiliation: University of Maryland
 email: vmastr (at) umd.edu
@@ -12,10 +12,11 @@ canonical: https://minimal-light-theme.yliu.me/
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
-arxiv: https://arxiv.org/
+# google_scholar: https://scholar.google.com/
 cv_link: assets/files/curriculum_vitae.pdf
 github_link: https://github.com/vmastr
 linkedin: https://www.linkedin.com/in/vmastr/
+# twitter: https://twitter.com/
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
