--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -26,7 +26,7 @@ main:
   - title: Lp-polarity, Mahler volumes, and the isotropic constant,
     authors: joint with B. Berndtsson and Y.A. Rubinstein, 
     # conference_short: MICCAI
-    conference: "preprint, 2023, axriv: 2304.14363."
+    conference: "preprint, 2023, axriv: 2304.14363, to appear in Anal. PDE."
     pdf: https://arxiv.org/abs/2304.14363
     # code: https://github.com/MrGiovanni/ContinualLearning
     # bibtex: https://bib.yliu.me/MICCAI23.txt
