--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: vmastr (at) umd.edu
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
-keywords: minimal light
+keywords: Vlassis Mastrantonis, Vlassis, Mastrantonis, Vlasios, Mastrantonis, mathematics, math
 description: The Minimal Light is a simple and elegant jekyll theme for academic personal homepage.
 canonical: https://minimal-light-theme.yliu.me/
 
