Invited talks edits
removed talk titles

--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -2,13 +2,13 @@ main:
 
   - title: "A Mahler-type inequality for the Bergman kernels"
     conference: "Midwestern Workshop in Geometric Analysis"
-    location: ""
+    location: "Indiana University,"
     date: "11--13 October 2024"
     link: "http://mwaa.math.indianapolis.iu.edu/"
 
   - title: "A Mahler-type inequality for the Bergman kernels"
     conference: "Gothenburg Complex Geometry"
-    location: ""
+    location: "Gothenburg, Sweeden,"
     date: "26--30 August 2024"
     link: "https://sites.google.com/view/gothenburgmath2024/overview?authuser=0"
   
