--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -2,7 +2,7 @@ main:
 
   - title: ""
     conference: "Analysis Seminar"
-    location: "SAMPS, Athens, Greece"
+    location: "SAMPS, Athens, Greece,"
     date: "13 January 2025"
     link: "https://sites.google.com/view/analysis-seminar-samps/"
 
