--- a/_data/books.yml
+++ b/_data/books.yml
@@ -3,7 +3,7 @@ main:
   - title: An introduction to convex, complex, and differential geoemtry via the Mahler conjectures    
     authors: (with Y.A. Rubinstein),
     # conference_short: CVPR
-    conference: "(manuscript in preparation)"
+    conference: "solicited by the Amer. Math. Soc. (manuscript in preparation)"
     pdf: https://
     # code: https://github.com/yaoyao-liu/class-incremental-learning/tree/main/mnemonics-training
     # page: https://class-il.mpi-inf.mpg.de/mnemonics/
