--- a/_data/conference_talks.yml
+++ b/_data/conference_talks.yml
@@ -2,7 +2,7 @@ main:
 
 
   - title: "A Mahler-type inequality for the Bergman kernels"
-    conference: "Midwestern Workshop in Geometric Analysis"
+    conference: "Midwestern Workshop on Asymptotic Analysis"
     location: "Indiana University,"
     date: "11-13 October 2024"
     link: "http://mwaa.math.indianapolis.iu.edu/"
