--- a/_data/conference_talks.yml
+++ b/_data/conference_talks.yml
@@ -3,7 +3,7 @@ main:
 
   - title: "A Mahler-type inequality for the Bergman kernels"
     conference: "Midwestern Workshop on Asymptotic Analysis"
-    location: "Indiana University,"
+    location: "Indiana University Bloomington,"
     date: "11-13 October 2024"
     link: "http://mwaa.math.indianapolis.iu.edu/"
 
