--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,6 +1,6 @@
 main:
-  - title: \(L^p\)-Legendre transforms and Mahler integrals\(:\) Asymptotics and the Fokker--Planck heat flow
-    # authors: (with Y.A. Rubinstein),
+  - title: \(L^p\)-Legendre transforms and Mahler integrals\(:\) Asymptotics and the Fokker-Planck heat flow
+    # authors: 
     # conference_short: CVPR
     conference: "in preparation, 2024" 
     pdf: 
