--- a/_data/seminar_talks.yml
+++ b/_data/seminar_talks.yml
@@ -14,7 +14,7 @@ main:
 
   - title: ""
     conference: "Analysis Seminar SAMPS"
-    location: "Athens, Greece,"
+    location: "NTUA, Athens, Greece,"
     date: "January 13, 2025"
     link: "https://sites.google.com/view/analysis-seminar-samps/"
   
