--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Basic Information 
 title: Vlassis Mastrantonis
-position: Ph.D. Student
-affiliation: University of Maryland
-email: vmastr (at) umd.edu
+position: Postdoctoral Researcher
+affiliation: Cornell University
+email: vm429 (at) cornell.edu
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
